# mdot

./: Cargo.toml  README.md  flake.nix  justfile  meson.build  meson.options
data/: com.github.merisedotdev.mdot.desktop.in  com.github.merisedotdev.mdot.gschema.xml.in  meson.build
data/icons/: meson.build
data/resources/: editionpanel.ui  mdot.cmb  mdot.css  mdot.gresource.xml  meson.build  toolbar.ui  window.ui
lib/: attribute.rs  constants.rs  error.rs  errors.rs  lib.rs
lib/entity/: attr.rs  attrs.rs  imp.rs  mod.rs
lib/graph/: link.rs  mod.rs
lib/project/: enumerate.rs  mod.rs
po/: LINGUAS  POTFILES.in  fr_FR.po  merisedot.pot
src/: config.rs  constants.rs  main.rs  meson.build
src/edition/: imp.rs  mod.rs
src/project/: imp.rs  mod.rs
src/toolbar/: imp.rs  mod.rs
src/utils/: action.rs  dialog.rs  loaders.rs  mod.rs
src/window/: imp.rs  mod.rs
src/window/actions/: cancel.rs  close.rs  mod.rs  newproj.rs  open.rs  pick_proj.rs  save.rs  validate.rs
src/window/dialogs/: mod.rs  open.rs  pick_proj.rs  script.rs
