[package]
name = "mdot"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.8.1", package = "libadwaita", features = ["v1_8"] }
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_20"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
